--- a/unknown_oi4rj7.crack.json
+++ b/unknown_oi4rj7.crack.json
@@ -1,22 +1,22 @@
 {
 	"_id": "unknown_oi4rj7.crack",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_oi4rj7.crack",
 	"sector": "HJG_4368",
 	"sec_level": 4,
 	"date_added": 1572571257598,
-	"last_scraped": 1572571709468,
+	"last_scraped": 1572571731674,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572571257598
 		}
 	],
-	"scrape_ct": 5,
-	"next_scrape": 1572571769468,
+	"scrape_ct": 4,
+	"next_scrape": 1572571791674,
 	"category": "clicker",
-	"last_update": 1572571709468,
+	"last_update": 1572571731674,
 	"output": [
 		{
 			"args": {},
@@ -76,7 +76,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 4218,
+			"calls": 4740,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ow th",
@@ -114,11 +114,6 @@
 			]
 		}
 	],
-	"updt": 1572571494949,
-	"edit": 1,
-	"retry_args": [
-		{
-			"CLICK": true
-		}
-	]
+	"updt": 1572571719792,
+	"edit": 2
 }
