--- a/unknown_yv2hdz.play.json
+++ b/unknown_yv2hdz.play.json
@@ -6,35 +6,45 @@
 	"sector": "HJG_0007",
 	"sec_level": 4,
 	"date_added": 1572562303224,
-	"last_scraped": 1572570905669,
+	"last_scraped": 1572573519920,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572562303224
 		}
 	],
-	"next_scrape": 1572614352412,
+	"next_scrape": 1572615460548,
 	"category": "dice_roller",
-	"last_update": 1572570905669,
+	"last_update": 1572573519920,
 	"output": [
 		{
 			"args": {},
-			"calls": 142699,
+			"calls": 146393,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"ntell",
+				"'Bo Y",
 				"west.\"",
 				"that i",
 				"hina's",
 				"gests ",
 				"deploy",
-				"gent lo",
+				"at int",
+				"ntellig",
+				"nt in t",
 				"ee depl",
 				"cs solu",
+				"Yi' may",
 				" soluti",
+				" in the",
 				"sts that",
+				"olutions",
+				"ntually ",
+				"igent lo",
+				"ests tha",
+				"ent logi",
 				"a's 'Bo ",
-				" the wes"
+				" the wes",
+				" logisti"
 			],
 			"hits": [
 				{
@@ -76,6 +86,6 @@
 			]
 		}
 	],
-	"updt": 1572568336646,
-	"edit": 6
+	"updt": 1572571044013,
+	"edit": 7
 }
