--- a/unknown_yv2hdz.play.json
+++ b/unknown_yv2hdz.play.json
@@ -6,29 +6,31 @@
 	"sector": "HJG_0007",
 	"sec_level": 4,
 	"date_added": 1572562303224,
-	"last_scraped": 1572575858265,
+	"last_scraped": 1572578038611,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572562303224
 		}
 	],
-	"next_scrape": 1572621525204,
+	"next_scrape": 1572617707765,
 	"category": "dice_roller",
-	"last_update": 1572575858265,
+	"last_update": 1572578038611,
 	"output": [
 		{
 			"args": {},
-			"calls": 167293,
+			"calls": 172699,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"'Bo Y",
 				"west.\"",
+				"ventua",
 				"that i",
 				"hina's",
 				"gests ",
 				"deploy",
 				"at int",
+				" west.",
 				"ntellig",
 				"nt in t",
 				"ee depl",
@@ -36,7 +38,9 @@
 				"Yi' may",
 				" soluti",
 				" in the",
+				"ts that ",
 				"sts that",
+				"stics so",
 				"olutions",
 				"ntually ",
 				"igent lo",
@@ -86,6 +90,6 @@
 			]
 		}
 	],
-	"updt": 1572573979149,
-	"edit": 9
+	"updt": 1572576231438,
+	"edit": 10
 }
