--- a/unknown_yv2hdz.play.json
+++ b/unknown_yv2hdz.play.json
@@ -6,44 +6,55 @@
 	"sector": "HJG_0007",
 	"sec_level": 4,
 	"date_added": 1572562303224,
-	"last_scraped": 1572578038611,
+	"last_scraped": 1572580338606,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572562303224
 		}
 	],
-	"next_scrape": 1572617707765,
+	"next_scrape": 1572624133826,
 	"category": "dice_roller",
-	"last_update": 1572578038611,
+	"last_update": 1572580338606,
 	"output": [
 		{
 			"args": {},
-			"calls": 172699,
+			"calls": 182123,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"'Bo Y",
 				"west.\"",
 				"ventua",
-				"that i",
+				"na's '",
 				"hina's",
-				"gests ",
 				"deploy",
 				"at int",
 				" west.",
+				"t in th",
+				"solutio",
 				"ntellig",
 				"nt in t",
+				"ly see ",
+				"ggests ",
 				"ee depl",
 				"cs solu",
 				"Yi' may",
+				"' may e",
 				" soluti",
 				" in the",
+				"yment in",
+				"utions l",
+				"ually se",
 				"ts that ",
 				"sts that",
 				"stics so",
+				"s that i",
 				"olutions",
 				"ntually ",
+				"nt logis",
+				"ions lik",
 				"igent lo",
+				"gistics ",
 				"ests tha",
 				"ent logi",
 				"a's 'Bo ",
@@ -90,6 +101,6 @@
 			]
 		}
 	],
-	"updt": 1572576231438,
-	"edit": 10
+	"updt": 1572578259757,
+	"edit": 11
 }
