--- a/unknown_yv2hdz.text.json
+++ b/unknown_yv2hdz.text.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yv2hdz.text",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_yv2hdz.text",
 	"sector": "K_6458",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566086357394
+		},
+		{
+			"type": "died",
+			"when": 1572581204596
 		}
 	],
 	"scrape_ct": 18,
@@ -113,8 +117,8 @@
 			]
 		}
 	],
-	"updt": 1570602128402,
-	"edit": 11,
+	"updt": 1570670895004,
+	"edit": 12,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
