--- a/unknown_yv2hdz.db.json
+++ b/unknown_yv2hdz.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yv2hdz.db",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "unknown_yv2hdz.db",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -39,10 +39,14 @@
 		{
 			"type": "died",
 			"when": 1569270166069
+		},
+		{
+			"type": "died",
+			"when": 1572581295481
 		}
 	],
-	"updt": 1569270356432,
-	"edit": 11,
+	"updt": 1570663228308,
+	"edit": 12,
 	"scrape_ct": 18,
 	"next_scrape": 1569108987155,
 	"category": "UNKNOWN CATEGORY",
