--- a/unknown_yv2hdz.play.json
+++ b/unknown_yv2hdz.play.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yv2hdz.play",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_yv2hdz.play",
 	"sector": "HJG_0007",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572562303224
+		},
+		{
+			"type": "died",
+			"when": 1572581526878
 		}
 	],
 	"next_scrape": 1572624133826,
@@ -101,6 +105,6 @@
 			]
 		}
 	],
-	"updt": 1572578259757,
-	"edit": 11
+	"updt": 1572580509773,
+	"edit": 12
 }
