--- a/derelict_nnxezh.pleas_donot_run.json
+++ b/derelict_nnxezh.pleas_donot_run.json
@@ -6,44 +6,54 @@
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572339051034,
-	"last_scraped": 1572584077258,
+	"last_scraped": 1572586329289,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572339051034
 		}
 	],
-	"next_scrape": 1572624310741,
+	"next_scrape": 1572629665015,
 	"category": "plant_sim",
-	"last_update": 1572584077258,
+	"last_update": 1572586329289,
 	"output": [
 		{
 			"args": {},
-			"calls": 116047,
+			"calls": 117156,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"ted |",
 				"sage ",
 				"ndari",
+				"ly fr",
 				"extnl",
+				"bhand",
 				"an't ",
+				"age y",
+				"9CB5E",
 				"0X75_",
+				" PROG",
 				"w. I c",
 				"ually ",
-				"s out ",
 				"his ou",
-				"g for ",
 				"e of y",
 				"ddr er",
+				"E ERRO",
 				"CB5E95",
+				"5_SECT",
 				" from ",
+				"ng for ",
+				"ing to ",
 				"ieve I'",
 				"X75_SEC",
 				"T0X73F7",
 				"R | USE",
 				" | USER",
 				"were loo",
+				"s out ma",
 				"USER ext",
 				"T ERROR ",
+				"ROR | TI",
 				"OR | NET",
 				"J: That ",
 				"BODY E -",
@@ -92,6 +102,6 @@
 			]
 		}
 	],
-	"updt": 1572581862536,
-	"edit": 115
+	"updt": 1572584118709,
+	"edit": 116
 }
