--- a/unknown_m1hwtz.me.json
+++ b/unknown_m1hwtz.me.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_m1hwtz.me",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_m1hwtz.me",
 	"sector": "VNP_2214",
 	"sec_level": 4,
 	"date_added": 1572591009266,
-	"last_scraped": 1572591472071,
+	"last_scraped": 1572592002621,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572591009266
 		}
 	],
-	"scrape_ct": 8,
-	"next_scrape": 1572591532071,
+	"next_scrape": 1572633902876,
 	"category": "fishie_tank",
-	"last_update": 1572591472071,
+	"last_update": 1572592002621,
 	"output": [
 		{
 			"args": {},
-			"calls": 30523,
+			"calls": 66155,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"100 00",
@@ -42,7 +41,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 3255,
+			"calls": 6599,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -69,7 +68,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 39908,
+			"calls": 71242,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"100 00",
@@ -98,6 +97,6 @@
 			]
 		}
 	],
-	"updt": 1572591338848,
-	"edit": 2
+	"updt": 1572591788557,
+	"edit": 4
 }
