--- a/unknown_wxbjtb.link.json
+++ b/unknown_wxbjtb.link.json
@@ -1,34 +1,26 @@
 {
 	"_id": "unknown_wxbjtb.link",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_wxbjtb.link",
 	"sector": "VNP_2214",
 	"sec_level": 4,
 	"date_added": 1572591540532,
-	"last_scraped": 1572591561982,
+	"last_scraped": 1572591592197,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572591540532
 		}
 	],
-	"retry_args": [
-		{
-			"do": "win"
-		},
-		{
-			"do": "LOSE"
-		}
-	],
-	"scrape_ct": 19,
-	"next_scrape": 1572591621982,
+	"scrape_ct": 16,
+	"next_scrape": 1572591652197,
 	"category": "risk_factor",
-	"last_update": 1572591553104,
+	"last_update": 1572591592197,
 	"output": [
 		{
 			"args": {},
-			"calls": 1835,
+			"calls": 2999,
 			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 			"fragments": [
 				"ist. ",
@@ -40,6 +32,348 @@
 				" chats.",
 				" that's "
 			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 300,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"ist. ",
+				"Haha.",
+				"joy ou",
+				"hicist.",
+				"f that'",
+				"bad thi",
+				" chats.",
+				" that's "
+			]
+		},
+		{
+			"args": {
+				"do": "LOSE"
+			},
+			"calls": 716,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"Q558T8",
+				"8K322G",
+				"joy ou3",
+				"Haha. 4",
+				"Haha. 3",
+				"8K51§C ",
+				"4Gist. ",
+				"3GHaha.",
+				"Haha.N 4",
+				"9bad thi",
+				"3 chats.",
+				"hicist.C ",
+				"hicist. 3",
+				"LD `VLOÃE",
+				"6Ghicist.",
+				"6GCjoy ou",
+				"6G chats.",
+				"3Gbad thi",
+				"hicist.N©9",
+				"hicist.N 3",
+				"bad thiN¨6",
+				"4G§f that'",
+				"4GCbad thi",
+				" that's  5",
+				"  chats.VL",
+				" that's N 7",
+				"\"win\"\n\nObad th",
+				"3GC w¤th do:\"win",
+				"that's 311K167GC ",
+				"O§\n\nYOU COULD `VL",
+				"\nYOU COUf that'SE",
+				"\nYO that's `VLOSE",
+				"K177GC with do:\"win\"",
+				"3K585 chats. ¨o:\"win",
+				"16GC wªth do:\"win\"\n\nO",
+				"\nOR\n\n¢OU COULf that'E",
+				"687B973M63¨K266GC with d",
+				"129T758B792M364K5©3GC©wit",
+				"th do:\"win\"\n\nOR\n\nYHaha.ULD `VLO",
+				"B107M6Haha.3GC with do:\"¤in\"\n\nO",
+				"with  that's \n\nOR\n\nYOU COULD `VL",
+				"th do:\"win\"\n\nOR\n\nYOU COªLD `VLOSE",
+				"ith do:\"win\"\n\n that's ¢OULD `VLOSE",
+				"4¨853K299GC with do that's Oª\n\nYOU C",
+				"33K549GC with do:\"win\"\n\nOR\n\nYOU COUL",
+				"23GC with do:\"win\"\n\nOR\n\nYOU©COULD `V",
+				"6GC with do:\"win\"\n\nOR\n\n¡OUªCOULD `ist.",
+				"58K¦68GC wÁth do:hicist.OR\n\nYOU CO¡LD ",
+				"5.9423214¨8707244e+5hicist.th doª\"win\"",
+				"373T¤47B294M28f that'with do:\"winª\n\nOR",
+				"3.622992093253897e+26QGC with do:\"win\"",
+				"194K230Gjoy ouÁdo:\"win\"\n\nOR\n\nYOU COULD",
+				"08GC with doist. ¨\n\nOR\n\nYOU COULD¨`VLO",
+				"M749K342GC wHaha.o:\"¤in\"\n\nOR\n\n¢OU COULD",
+				"K473GC with do:\"win\"\n\nOR\n\nYO¨ ¦OULD `VL",
+				"K41GC with do:§win\"\n\nOR©\nYOU COULD `VLO",
+				"K chats.ith do:\"w©n\"\n\nOR\n\nYOU COULD `VL",
+				"Haha.ith do:\"©in\"\n\nOR\n¦YO¡ COULD `VLOSE",
+				"9GC with do:§Haha.\nOR\n\nYOU COULD `VLOSE",
+				"9GC with do:\"¤in\"\n\n that's COULD `V§OSE",
+				"9GC with do:\"win\"\n\nOR\n\nYOU COULDhicist.",
+				"987K670GC w¨th do:\"win\"\n\nOHaha.U COULD ",
+				"8GC with d¦:\"win\"\n\nOR\nhicist.UÃD `VLOSE",
+				"8GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"86GC with do:\"win\"\n\nOR\njoy ouOULD `ÃLOS",
+				"82G¢ with do:\"win\"\n\nOR\n\nYOU COULf that'",
+				"7K974GC witbad thiin\"\n\nOR\n\nY¡U COULD `V",
+				"7GC wi¢h do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"7GC with do:\"win\"\n\nOR\nf that'ULD `VLOSE",
+				"7GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"6M685K101GC witjoy ouwin\"\n\nORÁ\nYOU COUL",
+				"6K4f that'th ¤o:\"win\"\n\nOR\n\nYOU COULD `V",
+				"63ªjoy ou do:\"Ãin\"\n\nOR\n\nYOU ¨OULD `VLOS",
+				"63GC with do:\"win\"\n\nOR\n that's LD `VLOS",
+				"5M28K650¤C with do:f that'OR\n\nYOU COU¡D",
+				"5M15K that's th do:\"win\"\n\nOR\n\nYOU COULD",
+				"5GC with joy oun\"\n\nOR\n\nYOU COÃLD `VLOSE",
+				"5GC with do:\"win\"\n\nOR\n\nYOU COUList. OSE",
+				"597K562GC with do:\"¤inhicist.YOU COULD ",
+				"578K530GC with ªo:\"¤in\"¤\nOR\n\n that's D ",
+				"517K528GC withicist.in\"\n\nOR\n\nYOU CÃULD ",
+				"50GC with do:\"win\"\n\nO that's OULD `VLOS",
+				"4GC wi©h do:\"win\"\n\nOR\n\njoy ouULD `VLOSE",
+				"4GC with do:\"win\" chats.OU COULD ¡VLOSE",
+				"4GC joy ouo:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"47GC with do:\"win\"\n\nOR\n\nYOU COULD ¡VLOS",
+				"46061Q832T4joy ouM505K728GC§w¡th do:\"wi",
+				"44GC wi©h do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"3©B6Á2M4 that's  with d§:\"win\"\n\nOR\n§YOU",
+				"3G¡ with do:\"win\"\nªORbad thiOULD `VLOSE",
+				"3GC ¨ith do:\"win\"\n\nOR\n\nYOU C chats.LOSE",
+				"3GC with chats.n\"\n\nOR\n\nYOU COULD `VLOSE",
+				"2K74§GC with do:\"win\"\n\nOR\n\nYOU C¤ chats",
+				"2GC with do:\"f that'R\n\nYOU COULD `VLOSE",
+				"22Bhicist.K463GC ¨ith ªo:\"win\"\n\nOR\n\nYOU",
+				"1GC wi¤h©do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"1GC with do:§win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"1GC with do:\"win\"\n\nOR\n\nist. OULD `VL§SE",
+				"1GC with do:\"win\"\n\nOR\n\nHaha.OULD `VLOSE",
+				"16 that's do:\"win\"\n\nOR\n\n¨OU COUªD `VLOS",
+				"1004667Q207T871B576M899¨584GC with do:\"",
+				"1.1627506983601623e+56QGC wit that's n\"",
+				"0M43Haha.GC with do:\"wi©\"\n\nOR\n\nYOU COUL",
+				"0K651f that' do:\"win\"\n\nOR\n\nYOU COULD `V",
+				"0G¦ with do:\"win\"\n\nOR\n\nYOf that' `VLOSE",
+				"09GCjoy oudo:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"08GC with do:\"win¦\n that's  COU¨D `VLOS",
+				"0604Q793T37B¢50M377K984GC with do:\"win\"",
+				"02K908GC with do:\"win\"\n\nOR\n\nYOU  chats.",
+				"02GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				".477785881054603hicist.GC with do:\"win\"",
+				"joy ouith do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"ist. with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"f that'th do:\"win\"\n\n¨R\n\nYOU COULD `VLOSE",
+				"f that'i¤h do:\"win\"\n\nOR\n\nYOU COU¦D `VLOS",
+				"chats.ith do:\"win\"\n¢OR\n\nYOU COULD `VLOSE",
+				"chats.48©GC¤with do:\"win\"\n\nOR\n\nYOU COULD",
+				"InfinityQGC wiªhªdo:\"win\"bad thiOU COULD",
+				"InfinityQGC wi¤h do:\"winf that'§OU COULD",
+				"InfinityQGC with do:\"win\"\n\nOR\n\nYÁU COU¨D",
+				"9ÃGC with do:\"win\"\n\nOR\n\nYOU CO that's SE",
+				"9hicist.h do§\"win\"\n\nOR\n\nYOU COUÃD `VLOSE",
+				"9K941GC¢with do:\"Haha.\nOR\n\nYOU ¨OULD `VL",
+				"9K136GC with do:\"winist. \n\nYOU COULD `VL",
+				"99GCist.  do:\"win\"\nªOR\n\nYOU COULD `VLOSE",
+				"999GC with do:\"¢in\"\n\nOR\n\nYOf that' `VLOS",
+				"91hicist. do:\"win\"\n\nÃR\n\nYOÃ COULD `VLOSE",
+				"8ist. C with do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"8Tª30B940M419K158GC with do:\"win\"\n\nOR\n\nY",
+				"8K870GC witbad thiin\"\n¦OR\n\nYOU COULD `VL",
+				"8K3GC with do:\"win\"\n\nOR\n§YOU COU chats.S",
+				"8K297GC with do:\"win\"§hicist.U COULD `VL",
+				"8K205GC with do:\"f that'R\n\nYOU COULD `VL",
+				"89GC w that's win\"\n\nOR\n\nYOU CO§LD `V¤OSE",
+				"87Gf that'do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"878GC with d¡:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"837GC with do:\"win\"\n\nOR\n\nYOUist. D `VLOS",
+				"7¨10¦M576¢181Gª with do:\"win\"\n\nOR\n\nYªU C",
+				"7¢5GC Ãith do:\"win\"\n\nOR\n\nYist. ULDÃ`VLOS",
+				"7ist. ith do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"7M239K¡58GC with chats.n\"\n\nOR\n\n¢OU COU¦D",
+				"7K chats.ith do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"76GC with chats.n\"\n\nOR\n\nYOU COULD `VLOSE",
+				"74GC with d¨:¦win\"\n\nOR\n\nYOU COULhicist.E",
+				"73GC witª do:\"win\"\n\nOR\n\nYO¢ COULD `ÃLOSE",
+				"731GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"725GC with do:\"win\"\n\nOR\n\nYOUÁCist. `ÁL¢S",
+				"70GC with dÁ:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"70GC with do:\"win\"\n\nOR\n\nYOU COUL¨ `VLOSE",
+				"6¤GC ©iÃh  that's \n\nOR\n\nYOU COULD `VLOSE",
+				"6M8Haha.0GC with do:\"win\"\n\nOR\n\nYOU COULD",
+				"6K82GC with do:\"win\"\n\nOR\n\nYOU COULD `VLO",
+				"67GC with§do:\"win\"\n\nOR\n\nYOU ¨OULD `VLOSE",
+				"67GC with do:\"win\"\n\nOR\n\nYOU COULHaha.OSE",
+				"66GC with do:\"ist. \nOR\n\nYOU COULD `VLOSE",
+				"666GC with that's \"\n\nOR\n\nYOU COULD `VLOS",
+				"64GC wi§h  that's \n\nOR\n\nYOU COULD `VLOSE",
+				"62Q837T65ª53M501¦34 chats.h do:\"win\"\n\nOR",
+				"5T§73B750M33K298GC witÁ do:\"win\"\n\nÃR\n\nYO",
+				"5M926K368GC bad thi:\"win\"\n\nOR\n\nYOU COULD",
+				"5M719K382GC wi chats.win\"\n\nOR\n\nYOU COULD",
+				"5M506K978GC wÃth do:\"win\"\n\nOhicist.COULD",
+				"5KÁ72GC with do:bad thiOR\n\nYOU COULD ªVL",
+				"5K5ist. with do:\"win\"\n\nOÃ\n\nYOU COULD `VL",
+				"5K178GC withªdo:\"win\"\n\nOhicist.COULD `VL",
+				"59K90G© with dist. n\"\n\nOR\n\nYOU COULD `VL",
+				"54Haha.ith do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"540GC wiHaha.:\"win\"©\nOR\n\nYOU COULD `VLOS",
+				"52ÁC Ãith do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"51340868258949420000QGC with do:\"win\"\n\nO",
+				"4ÃGC witÃ dª:\"win\"\n\nªR\n\nYOU Cjoy ouVLOSE",
+				"4¨6GC wit that's nÁ\n\nOR\n\nYOU CªULD `VLOS",
+				"4K2joy ouith do:\"win\"\n\nOR\n\nYOU COUL¦ `VL",
+				"4B16M451K856GC with do:\"win\"\n\nOR\n\nYOU ba",
+				"49K987hicist. do:\"win\"\n\nOR\n\nYOU COULD `V",
+				"48GC with do:\"win\"\n\nOR\n\nYOU COjoy ouLOSE",
+				"46K674GC with do:\"winjoy ou\nYOU COULD©`V",
+				"46GCHaha. d¢:¦win\"\n\n¨R\n\nYOU COULD `VLOSE",
+				"46GC ¢ith do:f that'OR\n\nYOU COULD `VL¦SE",
+				"455GC with do¢\"wi¢\"\n\nOR\n§YOU COUHaha.LOS",
+				"43GC with do: that's R\n\nYOU COULD `VLOSE",
+				"42GC¢with do:\"win\"\n\nOR\n\nYÁU COULDbad thi",
+				"42GC with do:\"win\"\n\nOR\n\nYf that'D `V¦OSE",
+				"41GC with do:\"wiª\"\n\nOR\nbad thiULD `VLOSE",
+				"41GC with do:\"win\"\nHaha.YOU COULD `VªOSE",
+				"41GC with do:\"win\"\n\nORbad thiOULD `VL§SE",
+				"413ÁC with do:\"w§n\"\n\nOR¨\nYOU COUf that'S",
+				"3©GC with do chats.\nOR\n\nYOU COULD `VLOSE",
+				"3§4K397GC with do:\"win\"\n\nOR\n\nYOU COULHah",
+				"3M1ist. 9GC with do:\"win\"\n\nOR\n\nYOU¡COULD",
+				"39GC ¡ith do:\"ist. \nOR\n\nYOU COULD `VLOSE",
+				"39GC with do:\"wif that'\nYOU CÃULD ¨VLOSE",
+				"39GC with do: that's R\n\nYOU COULD `VL¨SE",
+				"380¨C with do:¢wi that's YOU COULD `V©OS",
+				"37M822K920GC with do¦\"win\"\n\nOR\n\nYOU COUL",
+				"377GC with do:\"wi that's YOU COULD `VLOS",
+				"36GC with do:Áwin\"\n\nOR\n\nYOU COU©D ¡VLOSE",
+				"369GC wi©h do:\"win\"\n\nOR\n\nYObad thi `VLOS",
+				"35GC with do:\"win\"\n\nOR chats.OUªD `VLOSE",
+				"356GC with do:\"win\"\n¦OR\n\nf that'LDÁ`VLOS",
+				"34GC with do:\"win\"¨ that's  COULD `VLOSE",
+				"341GC¡with do:\"ist. \nOR\n\n§OU COULD `VLOS",
+				"340GC wiÃh¢do:\"win\"Ã\nOR\n\nYOU COULD ©VLOS",
+				"32ªC with do:\"win\"\n\nOR\n\nYOhicist.¨`VLOSE",
+				"32K425GC wiÁh do:\"win\"Ã that's  ©OULD `V",
+				"32GC with do:\"¦bad thi\n\nYOU COULD `VLOSE",
+				"325GC with do:\"win\"\n\nOR\n\nYO¡ COULD `VLOS",
+				"31GC with do:\"win\"\n\nOR\n\nYOU Cf that'LOSE",
+				"317GC with djoy ou\"\n\nOR\n\nYOU COULD `VLOS",
+				"315GC with dohicist.©OR\n\nYªU§COULD ¡VLOS",
+				"30GC with do:\" that's \n\nYOU ¤OULD `VLOSE",
+				"301GCjoy oudo:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"1¦GC©with do:\"win\"\n\nOR\n\nYOU CO that's SE",
+				"1joy outh do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"1K78GC f that':Ãwin\"\n\nOR\n\nYOU COUªD `VLO",
+				"1K51Gjoy ou do:\"win\"\n\nOR\n¢YOU COULD `¤LO",
+				"1K337¨C with¨do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"1K333GC with do:\"win\"\n\nO chats.COULD `VL",
+				"1K1joy ouith do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"1K157GC with do:\"win\"\n\nbad thi COULD `VL",
+				"1K138GC with do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"1K108GC with do:\"win\"\n\nOjoy ou COULD `VL",
+				"1Haha.ith do:\"win\"Ã\nOR\n\nYOU COULD `VLOSE",
+				"19ÃC witjoy ouwin\"\n\nOR\n\nYOU COULD `VLOSE",
+				"19Ghicist.do:\"win\"\n\nOR\n\nYOU COU¤D `VLOSE",
+				"19GC with do:\"win\"©\nOist. U COULD `VLOSE",
+				"19GC with do:\"wi chats.\nYOU COULD `V©OSE",
+				"18GC with do:f that'OR\n\nYOU C¨ULD `VLOSE",
+				"183GC w©th do:\"win\"\n\nO¨\n\n¢OU COULDHaha.S",
+				"183GC withÃdo:\"win\"\n\nOR\n§YOU that's VLOS",
+				"17GC with do:\"win\"\n\nOR\n\nYOU COULDf that'",
+				"17GC with do:\"whicist.\n\nYO¦ COULD `VLOSE",
+				"17GC with do:\"w chats.\n\nYOU COULD `VLOSE",
+				"179GC with do:\"win\"\n\nOR\n\nYOf that' `VLOS",
+				"176GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"171GC with do:\"win\"ist. \nY©U COULD `VLOS",
+				"16K285f that' d©:\"win\"\n\nOR\n\nÁOU COULD `V",
+				"15¢C with do:\"win\"\n\nOR\n\nYOÃ joy ou`VLOSE",
+				"15K2 that's h do:\"w¨n\"\n\nOR\n\nYOUÃCOULD `V",
+				"15Gbad thid¦:\"win\"\n\n¡R\n\nY¦U COULD `VLOSE",
+				"15GC w§thicist.in\"\n\nOR\n\nYOU COULD `VLOSE",
+				"15GC with d that's \nOR\n\nYOU COULD `VLOSE",
+				"159ª896K572GC with do:\"win\"\n\nOR\n\nYOU COU",
+				"154GC witist. \"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"1525¡615Q68¢T195B20©M899KÁ92GC with do:\"",
+				"14GChicist.o:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"14GC with that's \"\n\nOR\n\nYOU COULD `VLOSE",
+				"14GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"14GC wbad thi\"win\"\n¢OR\n\nYOU C¢ULD `VLOSE",
+				"147GC with do:\"wiÁ\"\n\nOR\n\nHaha.OULD `VLOS",
+				"13GC witist. \"©in\"\n\nOR\n\nYOU COULD `VLOSE",
+				"13GC with do:\"win\"\n\n¨R\n\nYOU ¢OULD `VÃOSE",
+				"13GC with do:\"win\"\n\nOR\n\nYhicist.D `VLOSE",
+				"132GC with do:\"win\"\n\nOR\n\nYOU COULDbad th",
+				"131GC with Ão:\"win\"\n\nOR\n\nYOHaha.LD `VLOS",
+				"130GC with¢do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"13 that's do:\"win\"\n\nOR\n\nYOU§COULD `VLOSE",
+				"12GC wi¡h do:\"win\"\n\nOR\n\nYhicist.D `V¡OSE",
+				"12GC with do:Ãwin\"\n\nOR\n\nYOU CObad thiOSE",
+				"12GC with do:\"win\"\n\nOR\n\nYOU COU chats.SE",
+				"12GC with do:\"win\"\n\nOR\n\n chats.LD `VLOSE",
+				"12GC with do:\"wi that's YOU C§ULD `VLOSE",
+				"11K480GC with do:\"wi¨\"\n\nOR\nf that'ULD `V",
+				"11GC wi¢hicist.in\"\n\nOR\n\nYO¢ COULD `V¢OSE",
+				"11GC with do:\"win\"\n\nOR\nHaha.COULD `VLOSE",
+				"11GC with do chats.\nOR\n\nYOU COULD `VLOSE",
+				"11GC wif that'win\"\n\nOR\n¦YOU COULD `V¤OSE",
+				"113GC with do:\"wi chats.©YOU COULD `VLOS",
+				"10GC with joy oun\"\n\nOR\n\nYOU COULD `VLOSE",
+				"10GC with do:\"win\"\n\nOR\n\nYOU bad thiVLOSE",
+				"10GC with do:\"win\"\n\nOR\n\nYOU Cf that'LOSE",
+				"10GC with do: chats.OR\n\nYOU CO¨LD `VLOSE",
+				"107GC wi©h do:\"wHaha.OR\n\nYOU COUL¡ `VLOS",
+				"f that'ith doÁ\"win\"\n\nOR\n\nYOU COULD¤`VLOSE",
+				"f that'497K329GC ¨ith do:\"win\"\n\nOR\n\nYOU C",
+				"Haha.7M549K497GCÃwith ¢o:¤win\"\n\nOR\n¢YOU C",
+				" chats.GC with do:\"win\"\n\nOR\n\nYO© COULD `V",
+				"joy ou with do¤\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"hicist.witÁ do:\"win\"\n\nÃR\n\nYOU COULD `VLOSE",
+				"f that'43K772GC¡with do:\"win\"\n\nO¡\n\nYOÁ COU",
+				" chats.with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				" chats. with do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"joy ou46M735K174GC wÃth do:\"win\"\n¨OR\n\nYOU¤C",
+				"ist. GC wit© do:\"¢in\"\n\nOR\n\nYOU COULD `VLOSE",
+				"ist. GC wit¨ do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"ist. 8GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"ist. 2.4277823563Ã455e+163QGC§with do:\"win\"",
+				"hicist. with ¦o:\"win\"\n\nOR\n\nYOU CO§LD `VLOSE",
+				"f that'75390850361284e+254QGC with do:\"win\"",
+				"bad thi6GC with do:\"win\"\n\nOR\n\nYOU COULD ÃVL",
+				"that's GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"joy ou4K24GC with do:\"win\"\n\nOR\n\nYOU COULD ÁV",
+				"hicist.725GCªwith do:\"win\"\n\nOR\n\nYOU COULD `V",
+				"f that'C with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"bad thi64GC with do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"Haha.8GC with ¦o:\"w¢n\"\n\nOR\n\nYOU COULD `VLOSE",
+				" that's 1GC with do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"hicist.GC with do:\"win\"\n¦OR\n\nYOU COULD `VLOSE",
+				"f that'GC ¨ith do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				" chats.50T585B632M864K758GC with do:\"win¡\n\nOR",
+				"hicist.6GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"bad thi3GC¡with do:\"win\"\n\nOR\n\nYOU COULD ¡VLOSE",
+				"ist. N 89M275ª656GC with do:\"¨in\"\n\nOR\n\nYOU COUL",
+				" chats.43GC with §o:\"wÃn\"\n\nOR\n\nYOU COULD ¦VLOSE",
+				"hicist. 15GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"bad thi 75GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				" that's 53GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				" that's 160GCÁw¦th do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				" that's  35GC with do:\"win\"\n\nOR\n\nYOU COULD ¨VLOSE",
+				" that's  33GC with do¨\"wiÁ\"\n¤OR\n\nYOU COULD `VLOSE",
+				" that's N 42GC with do¤\"win\"¦\nOR\n\nYOU COULD `VLOSE"
+			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "LOSE"
 		}
 	]
 }
