--- a/uknown_jau9wq.hitlist.json
+++ b/uknown_jau9wq.hitlist.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_jau9wq.hitlist",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_jau9wq.hitlist",
 	"sector": "SPC_6549",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572290049044
+		},
+		{
+			"type": "died",
+			"when": 1572604514168
 		}
 	],
 	"scrape_ct": 2,
@@ -55,6 +59,6 @@
 			]
 		}
 	],
-	"updt": 1572291083666,
-	"edit": 5
+	"updt": 1572291311818,
+	"edit": 6
 }
