--- a/unknown_mdv1ud.db.json
+++ b/unknown_mdv1ud.db.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_mdv1ud.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_mdv1ud.db",
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572615508573,
-	"last_scraped": 1572616772183,
+	"last_scraped": 1572616842517,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572615508573
 		}
 	],
-	"scrape_ct": 0,
-	"next_scrape": 1572616832183,
+	"next_scrape": 1572661226188,
 	"category": "coin_flipper",
-	"last_update": 1572616772183,
+	"last_update": 1572616842517,
 	"output": [
 		{
 			"args": {},
-			"calls": 129645,
+			"calls": 134313,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" unau",
@@ -73,6 +72,6 @@
 			]
 		}
 	],
-	"updt": 1572616606540,
-	"edit": 5
+	"updt": 1572616831131,
+	"edit": 6
 }
