--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -6,27 +6,36 @@
 	"sector": "K_6762",
 	"sec_level": 4,
 	"date_added": 1572568614596,
-	"last_scraped": 1572617145835,
+	"last_scraped": 1572619365198,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572568614596
 		}
 	],
-	"next_scrape": 1572657842580,
+	"next_scrape": 1572663979605,
 	"category": "dice_roller",
-	"last_update": 1572617145835,
+	"last_update": 1572619365198,
 	"output": [
 		{
 			"args": {},
-			"calls": 290310,
+			"calls": 297406,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
+				"ve be",
 				"on't ",
+				"n't m",
+				"ked t",
 				"een a",
+				"'t mi",
+				"n engi",
 				"blem, ",
+				" they'",
+				"o solve",
 				"m, so t",
 				" an eng",
+				"neering ",
+				"king lik",
 				"inking l",
 				"ing prob",
 				"e engine"
@@ -63,6 +72,6 @@
 			]
 		}
 	],
-	"updt": 1572614803355,
-	"edit": 24
+	"updt": 1572617282534,
+	"edit": 25
 }
