--- a/unknown_aeptgr.alch.json
+++ b/unknown_aeptgr.alch.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_aeptgr.alch",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_aeptgr.alch",
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572632114553,
-	"last_scraped": 1572633030543,
+	"last_scraped": 1572633261587,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572632114553
 		}
 	],
-	"scrape_ct": 3,
-	"next_scrape": 1572633090543,
+	"next_scrape": 1572672867245,
 	"category": "coin_flipper",
-	"last_update": 1572633030543,
+	"last_update": 1572633261587,
 	"output": [
 		{
 			"args": {},
-			"calls": 111106,
+			"calls": 137002,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"onfir",
@@ -61,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1572632835150,
-	"edit": 2
+	"updt": 1572633060969,
+	"edit": 3
 }
