--- a/unknown_qmw1np.db_backup.json
+++ b/unknown_qmw1np.db_backup.json
@@ -1,16 +1,63 @@
 {
 	"_id": "unknown_qmw1np.db_backup",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_qmw1np.db_backup",
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572633953542,
-	"last_scraped": 0,
+	"last_scraped": 1572634606974,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572633953542
+		}
+	],
+	"updt": 1572634410571,
+	"edit": 3,
+	"scrape_ct": 11,
+	"next_scrape": 1572634666974,
+	"category": "dice_roller",
+	"last_update": 1572634606974,
+	"output": [
+		{
+			"args": {},
+			"calls": 65389,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				" It's",
+				"oom ti",
+				": what",
+				"t are w",
+				"nt-in-t",
+				"m time: "
+			],
+			"hits": [
+				{
+					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+					"frags": [
+						" It's",
+						"oom ti",
+						": what",
+						"t are w",
+						"nt-in-t",
+						"m time: "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+			"frags": [
+				" It's",
+				"oom ti",
+				": what",
+				"t are w",
+				"nt-in-t",
+				"m time: "
+			]
 		}
 	]
 }
