--- a/unknown_qmw1np.db_backup.json
+++ b/unknown_qmw1np.db_backup.json
@@ -1,28 +1,27 @@
 {
 	"_id": "unknown_qmw1np.db_backup",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_qmw1np.db_backup",
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572633953542,
-	"last_scraped": 1572634606974,
+	"last_scraped": 1572635420997,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572633953542
 		}
 	],
-	"updt": 1572634410571,
-	"edit": 3,
-	"scrape_ct": 11,
-	"next_scrape": 1572634666974,
+	"updt": 1572635311945,
+	"edit": 6,
+	"next_scrape": 1572676394874,
 	"category": "dice_roller",
-	"last_update": 1572634606974,
+	"last_update": 1572635420997,
 	"output": [
 		{
 			"args": {},
-			"calls": 65389,
+			"calls": 143900,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				" It's",
