--- a/derelict_nnxezh.pleas_donot_run.json
+++ b/derelict_nnxezh.pleas_donot_run.json
@@ -6,20 +6,20 @@
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572339051034,
-	"last_scraped": 1572634858104,
+	"last_scraped": 1572637319730,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572339051034
 		}
 	],
-	"next_scrape": 1572676655535,
+	"next_scrape": 1572680505070,
 	"category": "plant_sim",
-	"last_update": 1572634858104,
+	"last_update": 1572637319730,
 	"output": [
 		{
 			"args": {},
-			"calls": 134592,
+			"calls": 135820,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ssage",
@@ -28,7 +28,6 @@
 				"an't ",
 				"age y",
 				"SYST ",
-				"LST0X",
 				"9CB5E",
 				"0X75_",
 				" belo",
@@ -37,7 +36,6 @@
 				"lly fr",
 				"i | SU",
 				"his ou",
-				"e of y",
 				"ddr er",
 				"E0X9CB",
 				"E ERRO",
@@ -50,10 +48,13 @@
 				"jbhanda",
 				"ing to ",
 				"ieve I'",
+				"eve I'm",
 				"aving t",
 				"X75_SEC",
+				"TIME ER",
 				"T0X73F7",
 				"OG ERRO",
+				"LST0X75",
 				"- the e",
 				" | USER",
 				" USER e",
@@ -62,14 +63,17 @@
 				"ted | BO",
 				"s out ma",
 				"pe this ",
+				"one of y",
 				"ndari | ",
 				"low. I c",
 				"extnl-ad",
 				"dr erajb",
+				"andari |",
 				"USER ext",
 				"T ERROR ",
 				"ROR | TI",
 				"OR | USE",
+				"OR | TIM",
 				"OR | NET",
 				"J: That ",
 				"BODY E -",
@@ -121,6 +125,6 @@
 			]
 		}
 	],
-	"updt": 1572632384378,
-	"edit": 137
+	"updt": 1572635086575,
+	"edit": 138
 }
