--- a/derelict_nnxezh.pleas_donot_run.json
+++ b/derelict_nnxezh.pleas_donot_run.json
@@ -6,20 +6,20 @@
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572339051034,
-	"last_scraped": 1572647216599,
+	"last_scraped": 1572649640100,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572339051034
 		}
 	],
-	"next_scrape": 1572691478349,
+	"next_scrape": 1572692015294,
 	"category": "plant_sim",
-	"last_update": 1572647216599,
+	"last_update": 1572649640100,
 	"output": [
 		{
 			"args": {},
-			"calls": 139764,
+			"calls": 141123,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ssage",
@@ -30,20 +30,23 @@
 				"age y",
 				"SYST ",
 				"9CB5E",
+				"1_CLS",
 				"0X75_",
 				" belo",
 				" PROG",
 				"ually ",
 				"t pass",
+				"om one",
 				"lly fr",
 				"i | SU",
 				"his ou",
 				"ddr er",
+				"ME ERR",
 				"E0X9CB",
 				"E ERRO",
 				"CB5E95",
 				"5_SECT",
-				"rajbhan",
+				" | SUB",
 				"ou were",
 				"ou want",
 				"oking f",
@@ -69,7 +72,9 @@
 				"one of y",
 				"ndari | ",
 				"low. I c",
+				"extract ",
 				"extnl-ad",
+				"erajbhan",
 				"dr erajb",
 				"andari |",
 				"USER ext",
@@ -79,6 +84,7 @@
 				"OR | TIM",
 				"OR | NET",
 				"J: That ",
+				"ERROR | ",
 				"BODY E -",
 				"'t belie",
 				" to type",
@@ -128,6 +134,6 @@
 			]
 		}
 	],
-	"updt": 1572645063626,
-	"edit": 142
+	"updt": 1572647317327,
+	"edit": 143
 }
