--- a/unknown_8a27qh.casino.json
+++ b/unknown_8a27qh.casino.json
@@ -6,20 +6,20 @@
 	"sector": "K_9443",
 	"sec_level": 4,
 	"date_added": 1572412300856,
-	"last_scraped": 1572647557769,
+	"last_scraped": 1572650022247,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572412300856
 		}
 	],
-	"next_scrape": 1572691958179,
+	"next_scrape": 1572692105323,
 	"category": "coin_flipper",
-	"last_update": 1572647557769,
+	"last_update": 1572650022247,
 	"output": [
 		{
 			"args": {},
-			"calls": 996189,
+			"calls": 1004719,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ed wh",
@@ -54,6 +54,6 @@
 			]
 		}
 	],
-	"updt": 1572645289392,
-	"edit": 106
+	"updt": 1572647766806,
+	"edit": 107
 }
