--- a/derelict_nnxezh.pleas_donot_run.json
+++ b/derelict_nnxezh.pleas_donot_run.json
@@ -6,42 +6,43 @@
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572339051034,
-	"last_scraped": 1572649640100,
+	"last_scraped": 1572652070596,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572339051034
 		}
 	],
-	"next_scrape": 1572692015294,
+	"next_scrape": 1572697658656,
 	"category": "plant_sim",
-	"last_update": 1572649640100,
+	"last_update": 1572652070596,
 	"output": [
 		{
 			"args": {},
-			"calls": 141123,
+			"calls": 142055,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"| PRO",
 				"ssage",
 				"sage ",
-				"ookin",
+				"eliev",
 				"anted",
 				"an't ",
 				"age y",
-				"SYST ",
 				"9CB5E",
 				"1_CLS",
-				"0X75_",
 				" belo",
 				" PROG",
+				" I'm ",
 				"ually ",
-				"t pass",
 				"om one",
 				"lly fr",
 				"i | SU",
-				"his ou",
 				"ddr er",
+				"X73F7_",
+				"W ERRO",
 				"ME ERR",
+				"ECT0X7",
 				"E0X9CB",
 				"E ERRO",
 				"CB5E95",
@@ -51,6 +52,7 @@
 				"ou want",
 				"oking f",
 				"ng for ",
+				"n't bel",
 				"jbhanda",
 				"ing to ",
 				"ieve I'",
@@ -61,8 +63,9 @@
 				"T0X73F7",
 				"OG ERRO",
 				"LST0X75",
-				"- the e",
+				". I can",
 				" | USER",
+				" for is",
 				" USER e",
 				"were loo",
 				"the extr",
@@ -72,14 +75,20 @@
 				"one of y",
 				"ndari | ",
 				"low. I c",
+				"his out ",
+				"hat pass",
 				"extract ",
 				"extnl-ad",
 				"erajbhan",
+				"e lookin",
 				"dr erajb",
 				"andari |",
+				"\\nSYST E",
 				"USER ext",
+				"T0X75_SE",
 				"T ERROR ",
 				"ROR | TI",
+				"R | TIME",
 				"OR | USE",
 				"OR | TIM",
 				"OR | NET",
@@ -90,6 +99,7 @@
 				" to type",
 				" from on",
 				" ERROR |",
+				" - the e",
 				"B5E952\\nS"
 			],
 			"hits": [
@@ -134,6 +144,6 @@
 			]
 		}
 	],
-	"updt": 1572647317327,
-	"edit": 143
+	"updt": 1572649797422,
+	"edit": 144
 }
