--- a/derelict_nnxezh.pleas_donot_run.json
+++ b/derelict_nnxezh.pleas_donot_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "derelict_nnxezh.pleas_donot_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "derelict_nnxezh.pleas_donot_run",
 	"sector": "K_7503",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572339051034
+		},
+		{
+			"type": "died",
+			"when": 1572652998991
 		}
 	],
 	"next_scrape": 1572697658656,
@@ -144,6 +148,6 @@
 			]
 		}
 	],
-	"updt": 1572649797422,
-	"edit": 144
+	"updt": 1572652277889,
+	"edit": 145
 }
