--- a/derelict_nnxezh.uick_start.json
+++ b/derelict_nnxezh.uick_start.json
@@ -1,7 +1,7 @@
 {
 	"_id": "derelict_nnxezh.uick_start",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "derelict_nnxezh.uick_start",
 	"sector": "NGC_4040",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565629679587
+		},
+		{
+			"type": "died",
+			"when": 1572652968888
 		}
 	],
 	"scrape_ct": 2,
@@ -102,6 +106,6 @@
 			]
 		}
 	],
-	"updt": 1571360852797,
-	"edit": 183
+	"updt": 1571363333777,
+	"edit": 184
 }
