--- a/unknown_857ztx.emergency_lime_juice.json
+++ b/unknown_857ztx.emergency_lime_juice.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_857ztx.emergency_lime_juice",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_857ztx.emergency_lime_juice",
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572665572096,
-	"last_scraped": 1572666202525,
+	"last_scraped": 1572666875566,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572665572096
 		}
 	],
-	"scrape_ct": 9,
-	"next_scrape": 1572666262525,
+	"next_scrape": 1572709712666,
 	"category": "coin_flipper",
-	"last_update": 1572666202525,
+	"last_update": 1572666875566,
 	"output": [
 		{
 			"args": {},
-			"calls": 76549,
+			"calls": 141416,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"I hav",
@@ -70,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1572665815447,
-	"edit": 2
+	"updt": 1572666718292,
+	"edit": 5
 }
