--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -6,20 +6,20 @@
 	"sector": "K_6762",
 	"sec_level": 4,
 	"date_added": 1572568614596,
-	"last_scraped": 1572678631451,
+	"last_scraped": 1572680983464,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572568614596
 		}
 	],
-	"next_scrape": 1572720534841,
+	"next_scrape": 1572721647394,
 	"category": "dice_roller",
-	"last_update": 1572678631451,
+	"last_update": 1572680983464,
 	"output": [
 		{
 			"args": {},
-			"calls": 467789,
+			"calls": 471765,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ve be",
@@ -28,12 +28,18 @@
 				"ked t",
 				"een a",
 				"'t mi",
-				"n engi",
+				"y've b",
+				"t mind",
+				"ring p",
 				"blem, ",
 				" they'",
 				"o solve",
+				"n engin",
+				"mind th",
 				"m, so t",
+				"'re thi",
 				" an eng",
+				"ve an en",
 				"neering ",
 				"king lik",
 				"inking l",
@@ -72,6 +78,6 @@
 			]
 		}
 	],
-	"updt": 1572676410313,
-	"edit": 49
+	"updt": 1572678889502,
+	"edit": 50
 }
