--- a/unknown_ta3eaa.random.json
+++ b/unknown_ta3eaa.random.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_ta3eaa.random",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_ta3eaa.random",
 	"sector": "SPC_3222",
 	"sec_level": 4,
 	"date_added": 1572708507921,
-	"last_scraped": 1572708587843,
+	"last_scraped": 1572709391762,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572708507921
 		}
 	],
-	"scrape_ct": 18,
-	"next_scrape": 1572708647843,
+	"next_scrape": 1572749076853,
 	"category": "fishie_tank",
-	"last_update": 1572708587843,
+	"last_update": 1572709391762,
 	"output": [
 		{
 			"args": {},
-			"calls": 10067,
+			"calls": 88602,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"y ## I",
@@ -48,7 +47,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 674,
+			"calls": 7003,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -81,7 +80,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 4685,
+			"calls": 51865,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"y ## I",
@@ -118,5 +117,7 @@
 				"om time:"
 			]
 		}
-	]
+	],
+	"updt": 1572709329204,
+	"edit": 3
 }
