--- a/uknown_xr3578.t1cracker.json
+++ b/uknown_xr3578.t1cracker.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_xr3578.t1cracker",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "could not json",
 	"script": "uknown_xr3578.t1cracker",
 	"sector": "SPC_3222",
 	"sec_level": 4,
@@ -57,11 +57,10 @@
 	],
 	"retry_args": [
 		{
-			"do": "win"
-		},
-		{
 			"do": "LOSE"
 		}
 	],
-	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`"
+	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+	"updt": 1572708652243,
+	"edit": 1
 }
