--- a/unknown_ta3eaa.random.json
+++ b/unknown_ta3eaa.random.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_ta3eaa.random",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ta3eaa.random",
 	"sector": "SPC_3222",
 	"sec_level": 4,
 	"date_added": 1572708507921,
-	"last_scraped": 1572711873742,
+	"last_scraped": 1572714808106,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572708507921
 		}
 	],
-	"next_scrape": 1572754359419,
+	"next_scrape": 1572761161002,
 	"category": "fishie_tank",
-	"last_update": 1572711873742,
+	"last_update": 1572714818072,
 	"output": [
 		{
 			"args": {},
-			"calls": 101692,
+			"calls": 112467,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"y ## I",
@@ -47,7 +47,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 7483,
+			"calls": 7979,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -118,6 +118,11 @@
 			]
 		}
 	],
-	"updt": 1572709555669,
-	"edit": 4
+	"updt": 1572712037472,
+	"edit": 5,
+	"retry_args": [
+		{
+			"do": "clean"
+		}
+	]
 }
