--- a/uknown_ido5g4.db.json
+++ b/uknown_ido5g4.db.json
@@ -6,21 +6,21 @@
 	"sector": "SPC_1841",
 	"sec_level": 4,
 	"date_added": 1572724732044,
-	"last_scraped": 1572724891227,
+	"last_scraped": 1572725105166,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572724732044
 		}
 	],
-	"scrape_ct": 16,
-	"next_scrape": 1572724951227,
+	"scrape_ct": 10,
+	"next_scrape": 1572725165166,
 	"category": "fishie_tank",
-	"last_update": 1572724881039,
+	"last_update": 1572725105166,
 	"output": [
 		{
 			"args": {},
-			"calls": 17295,
+			"calls": 40238,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"that ",
@@ -62,7 +62,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 1821,
+			"calls": 3016,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -109,7 +109,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 6754,
+			"calls": 22994,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"that ",
@@ -166,6 +166,14 @@
 				"en'. ## ",
 				"ble? ## "
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "feed"
+		},
+		{
+			"do": "clean"
 		}
 	]
 }
