--- a/unknown_mdv1ud.db.json
+++ b/unknown_mdv1ud.db.json
@@ -6,33 +6,41 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572615508573,
-	"last_scraped": 1572734276002,
+	"last_scraped": 1572736838390,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572615508573
 		}
 	],
-	"next_scrape": 1572773987795,
+	"next_scrape": 1572782253890,
 	"category": "coin_flipper",
-	"last_update": 1572734276002,
+	"last_update": 1572736838390,
 	"output": [
 		{
 			"args": {},
-			"calls": 497599,
+			"calls": 502946,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" unau",
+				" Dr. ",
 				"tions:",
 				"equipm",
+				"d appr",
 				"Septem",
+				"6. Nat",
 				" SG43N",
+				"uthoris",
 				"ent; un",
 				"a Rajbh",
 				" licens",
+				"se of li",
 				"opriatio",
+				"ndhya Ra",
+				"DOB: Sep",
 				". Nation",
-				" of viol"
+				" of viol",
+				" Summary"
 			],
 			"hits": [
 				{
@@ -72,6 +80,6 @@
 			]
 		}
 	],
-	"updt": 1572731882548,
-	"edit": 53
+	"updt": 1572734362835,
+	"edit": 54
 }
