--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -6,44 +6,49 @@
 	"sector": "K_6762",
 	"sec_level": 4,
 	"date_added": 1572568614596,
-	"last_scraped": 1572742483192,
+	"last_scraped": 1572745034589,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572568614596
 		}
 	],
-	"next_scrape": 1572788638474,
+	"next_scrape": 1572789860253,
 	"category": "dice_roller",
-	"last_update": 1572742483192,
+	"last_update": 1572745034589,
 	"output": [
 		{
 			"args": {},
-			"calls": 655580,
+			"calls": 664917,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"ve be",
 				"on't ",
 				"n't m",
 				"ked t",
 				"een a",
-				"'t mi",
 				"y've b",
 				"t mind",
-				"ring p",
 				"blem, ",
+				"'ve be",
+				"'t min",
 				" they'",
+				" been ",
 				"o solve",
 				"n engin",
 				"mind th",
 				"m, so t",
+				"ike eng",
 				"'re thi",
+				" so the",
 				" an eng",
 				"ve an en",
 				"neering ",
 				"king lik",
 				"inking l",
 				"ing prob",
+				"ing like",
+				"ineering",
+				"ering pr",
 				"e engine"
 			],
 			"hits": [
@@ -78,6 +83,6 @@
 			]
 		}
 	],
-	"updt": 1572740222872,
-	"edit": 74
+	"updt": 1572742701347,
+	"edit": 75
 }
