--- a/unknown_3intkd.db.json
+++ b/unknown_3intkd.db.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_3intkd.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_3intkd.db",
 	"sector": "HJG_0007",
 	"sec_level": 4,
 	"date_added": 1572557290178,
-	"last_scraped": 1572760860859,
+	"last_scraped": 1572763595848,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572557290178
 		}
 	],
-	"next_scrape": 1572804789700,
+	"next_scrape": 1572810335179,
 	"category": "coin_flipper",
-	"last_update": 1572760860859,
+	"last_update": 1572763595848,
 	"output": [
 		{
 			"args": {},
-			"calls": 778630,
+			"calls": 792533,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"77 of",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1572758487809,
-	"edit": 86
+	"updt": 1572760965368,
+	"edit": 87
 }
