--- a/uknown_x08osf.bot_scam_do_not_run.json
+++ b/uknown_x08osf.bot_scam_do_not_run.json
@@ -6,22 +6,22 @@
 	"sector": "K_9844",
 	"sec_level": 4,
 	"date_added": 1572516454740,
-	"last_scraped": 1572761884988,
+	"last_scraped": 1572764668717,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572516454740
 		}
 	],
-	"updt": 1572759388463,
-	"edit": 107,
-	"next_scrape": 1572804075772,
+	"updt": 1572762091203,
+	"edit": 108,
+	"next_scrape": 1572808506966,
 	"category": "dice_roller",
-	"last_update": 1572761884988,
+	"last_update": 1572764668717,
 	"output": [
 		{
 			"args": {},
-			"calls": 999532,
+			"calls": 1006477,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ole i",
