--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -6,50 +6,53 @@
 	"sector": "K_6762",
 	"sec_level": 4,
 	"date_added": 1572568614596,
-	"last_scraped": 1572762358414,
+	"last_scraped": 1572765120182,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572568614596
 		}
 	],
-	"next_scrape": 1572802847532,
+	"next_scrape": 1572810036082,
 	"category": "dice_roller",
-	"last_update": 1572762358414,
+	"last_update": 1572765120182,
 	"output": [
 		{
 			"args": {},
-			"calls": 715236,
+			"calls": 725328,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"on't ",
 				"n't m",
 				"ked t",
+				"ey're",
 				"een a",
-				"y've b",
 				"t mind",
-				"blem, ",
-				"'ve be",
+				"asked ",
 				"'t min",
-				" they'",
 				" been ",
-				"o solve",
+				"y're th",
 				"n engin",
 				"mind th",
 				"m, so t",
 				"ike eng",
 				"'re thi",
 				" so the",
-				" an eng",
 				"ve an en",
+				"to solve",
+				"so they'",
 				"neering ",
 				"king lik",
 				"inking l",
 				"ing prob",
 				"ing like",
 				"ineering",
+				"ey've be",
 				"ering pr",
-				"e engine"
+				"e engine",
+				"blem, so",
+				" an engi",
+				" - they'"
 			],
 			"hits": [
 				{
@@ -83,6 +86,6 @@
 			]
 		}
 	],
-	"updt": 1572760064191,
-	"edit": 82
+	"updt": 1572762768056,
+	"edit": 83
 }
