--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -6,51 +6,57 @@
 	"sector": "K_6762",
 	"sec_level": 4,
 	"date_added": 1572568614596,
-	"last_scraped": 1572770257782,
+	"last_scraped": 1572772709304,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572568614596
 		}
 	],
-	"next_scrape": 1572812547218,
+	"next_scrape": 1572816308599,
 	"category": "dice_roller",
-	"last_update": 1572770257782,
+	"last_update": 1572772709304,
 	"output": [
 		{
 			"args": {},
-			"calls": 745991,
+			"calls": 751374,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"on't ",
 				"n't m",
 				"ked t",
 				"ey're",
-				"een a",
+				" to s",
 				"t mind",
+				"m - th",
 				"asked ",
 				"'t min",
-				" been ",
 				"y're th",
+				"thinkin",
 				"n engin",
 				"mind th",
 				"m, so t",
-				"ike eng",
 				"'re thi",
 				" so the",
+				" Don't ",
 				"ve an en",
 				"to solve",
 				"so they'",
+				"ring pro",
 				"neering ",
+				"nd them ",
 				"king lik",
 				"inking l",
 				"ing prob",
 				"ing like",
 				"ineering",
+				"ike engi",
 				"ey've be",
 				"ering pr",
 				"e engine",
+				"e been a",
 				"blem, so",
+				"- they'v",
+				" they've",
 				" an engi",
 				" - they'"
 			],
@@ -86,6 +92,6 @@
 			]
 		}
 	],
-	"updt": 1572767953134,
-	"edit": 85
+	"updt": 1572770431117,
+	"edit": 86
 }
