--- a/uknown_y3oxuh.public.json
+++ b/uknown_y3oxuh.public.json
@@ -6,21 +6,21 @@
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572774135902,
-	"last_scraped": 1572774248423,
+	"last_scraped": 1572775120439,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572774135902
 		}
 	],
-	"scrape_ct": 18,
-	"next_scrape": 1572774308423,
+	"scrape_ct": 4,
+	"next_scrape": 1572775180439,
 	"category": "plant_sim",
-	"last_update": 1572774248423,
+	"last_update": 1572775120439,
 	"output": [
 		{
 			"args": {},
-			"calls": 1720,
+			"calls": 11404,
 			"base": "c:\"7oy51q\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"ire l",
@@ -57,5 +57,7 @@
 				" waited "
 			]
 		}
-	]
+	],
+	"updt": 1572774940226,
+	"edit": 4
 }
