--- a/uknown_y3oxuh.public.json
+++ b/uknown_y3oxuh.public.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_y3oxuh.public",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_y3oxuh.public",
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572774135902,
-	"last_scraped": 1572775120439,
+	"last_scraped": 1572775422424,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572774135902
 		}
 	],
-	"scrape_ct": 4,
-	"next_scrape": 1572775180439,
+	"next_scrape": 1572818141240,
 	"category": "plant_sim",
-	"last_update": 1572775120439,
+	"last_update": 1572775422424,
 	"output": [
 		{
 			"args": {},
-			"calls": 11404,
+			"calls": 14371,
 			"base": "c:\"7oy51q\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"ire l",
@@ -58,6 +57,6 @@
 			]
 		}
 	],
-	"updt": 1572774940226,
-	"edit": 4
+	"updt": 1572775390993,
+	"edit": 6
 }
