--- a/uknown_evcpca.withdraw.json
+++ b/uknown_evcpca.withdraw.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_evcpca.withdraw",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_evcpca.withdraw",
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572776247440,
-	"last_scraped": 1572776970738,
+	"last_scraped": 1572777450907,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572776247440
 		}
 	],
-	"scrape_ct": 8,
-	"next_scrape": 1572777030738,
+	"next_scrape": 1572819624533,
 	"category": "dice_roller",
-	"last_update": 1572776898556,
+	"last_update": 1572777450907,
 	"output": [
 		{
 			"args": {},
-			"calls": 67427,
+			"calls": 134274,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"t jus",
@@ -70,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1572776745329,
-	"edit": 3
+	"updt": 1572777423912,
+	"edit": 5
 }
