--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -6,56 +6,60 @@
 	"sector": "K_6762",
 	"sec_level": 4,
 	"date_added": 1572568614596,
-	"last_scraped": 1572775301489,
+	"last_scraped": 1572778075382,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572568614596
 		}
 	],
-	"next_scrape": 1572816825616,
+	"next_scrape": 1572824458017,
 	"category": "dice_roller",
-	"last_update": 1572775301489,
+	"last_update": 1572778075382,
 	"output": [
 		{
 			"args": {},
-			"calls": 760679,
+			"calls": 768020,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"n't m",
 				"ked t",
-				"ey're",
 				" to s",
+				"ve bee",
 				"t mind",
-				"m - th",
+				"nginee",
+				"n aske",
 				"asked ",
 				"'t min",
 				"y're th",
 				"thinkin",
 				"n engin",
 				"mind th",
-				"m, so t",
+				"em - th",
 				"'re thi",
 				" so the",
-				" Don't ",
 				"ve an en",
 				"to solve",
 				"so they'",
 				"ring pro",
 				"neering ",
 				"nd them ",
+				"m, so th",
 				"king lik",
 				"inking l",
 				"ing prob",
 				"ing like",
 				"ineering",
 				"ike engi",
+				"hey're t",
 				"ey've be",
 				"ering pr",
+				"eering p",
 				"e engine",
 				"e been a",
 				"blem, so",
 				"- they'v",
+				"# Don't ",
 				" they've",
 				" an engi",
 				" - they'"
@@ -92,6 +96,6 @@
 			]
 		}
 	],
-	"updt": 1572772914464,
-	"edit": 87
+	"updt": 1572775390993,
+	"edit": 88
 }
