--- a/unknown_857ztx.emergency_lime_juice.json
+++ b/unknown_857ztx.emergency_lime_juice.json
@@ -6,31 +6,41 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572665572096,
-	"last_scraped": 1572778295462,
+	"last_scraped": 1572780696947,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572665572096
 		}
 	],
-	"next_scrape": 1572818334803,
+	"next_scrape": 1572826709415,
 	"category": "coin_flipper",
-	"last_update": 1572778295462,
+	"last_update": 1572780696947,
 	"output": [
 		{
 			"args": {},
-			"calls": 468814,
+			"calls": 482087,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"I hav",
+				"ts 3. ",
+				"rength",
+				"I have",
+				" have ",
+				" 3.\\n2",
+				" 16. 4",
+				"with st",
 				"h stren",
 				"ength o",
 				"eats 3.",
+				"C8 Okay",
 				".\\n20C8",
-				". 4?\\n2",
 				"gth of 3",
+				"d 9. 16.",
+				"C9 4 bea",
 				"?\\n20C9 ",
 				"7 and 9.",
+				"6. 4?\\n2",
+				"20C8 Oka",
 				"16. 4?\\n"
 			],
 			"hits": [
@@ -69,6 +79,6 @@
 			]
 		}
 	],
-	"updt": 1572775618075,
-	"edit": 49
+	"updt": 1572778324730,
+	"edit": 50
 }
