--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -6,20 +6,20 @@
 	"sector": "K_6762",
 	"sec_level": 4,
 	"date_added": 1572568614596,
-	"last_scraped": 1572780455589,
+	"last_scraped": 1572782948568,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572568614596
 		}
 	],
-	"next_scrape": 1572826943389,
+	"next_scrape": 1572823902669,
 	"category": "dice_roller",
-	"last_update": 1572780455589,
+	"last_update": 1572782948568,
 	"output": [
 		{
 			"args": {},
-			"calls": 780151,
+			"calls": 784668,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"n't m",
@@ -35,6 +35,7 @@
 				"thinkin",
 				"n engin",
 				"mind th",
+				"like en",
 				"em - th",
 				"'re thi",
 				" so the",
@@ -96,6 +97,6 @@
 			]
 		}
 	],
-	"updt": 1572778098645,
-	"edit": 89
+	"updt": 1572780578251,
+	"edit": 90
 }
