--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -6,47 +6,48 @@
 	"sector": "K_6762",
 	"sec_level": 4,
 	"date_added": 1572568614596,
-	"last_scraped": 1572785480195,
+	"last_scraped": 1572788194304,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572568614596
 		}
 	],
-	"next_scrape": 1572830620171,
+	"next_scrape": 1572831126800,
 	"category": "dice_roller",
-	"last_update": 1572785480195,
+	"last_update": 1572788194304,
 	"output": [
 		{
 			"args": {},
-			"calls": 793489,
+			"calls": 802326,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"n't m",
-				"ked t",
-				" to s",
+				"hem -",
 				"ve bee",
-				"t mind",
 				"nginee",
 				"n aske",
-				"asked ",
-				"'t min",
+				" like ",
 				"y're th",
 				"thinkin",
+				"roblem,",
 				"n engin",
 				"mind th",
 				"like en",
+				"hinking",
 				"em - th",
 				"'re thi",
 				" so the",
+				" asked ",
 				"ve an en",
 				"to solve",
+				"they're ",
 				"so they'",
 				"ring pro",
 				"neering ",
 				"nd them ",
 				"m, so th",
 				"king lik",
+				"ked to s",
 				"inking l",
 				"ing prob",
 				"ing like",
@@ -55,11 +56,15 @@
 				"hey're t",
 				"ey've be",
 				"ering pr",
+				"em, so t",
 				"eering p",
 				"e engine",
 				"e been a",
+				"e an eng",
 				"blem, so",
+				"Don't mi",
 				"- they'v",
+				"'t mind ",
 				"# Don't ",
 				" they've",
 				" an engi",
@@ -97,6 +102,6 @@
 			]
 		}
 	],
-	"updt": 1572783059469,
-	"edit": 91
+	"updt": 1572785540863,
+	"edit": 92
 }
