--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -6,45 +6,49 @@
 	"sector": "K_6762",
 	"sec_level": 4,
 	"date_added": 1572568614596,
-	"last_scraped": 1572788194304,
+	"last_scraped": 1572791076178,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572568614596
 		}
 	],
-	"next_scrape": 1572831126800,
+	"next_scrape": 1572837121564,
 	"category": "dice_roller",
-	"last_update": 1572788194304,
+	"last_update": 1572791076178,
 	"output": [
 		{
 			"args": {},
-			"calls": 802326,
+			"calls": 813016,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"hem -",
 				"ve bee",
 				"nginee",
 				"n aske",
+				" probl",
 				" like ",
 				"y're th",
-				"thinkin",
 				"roblem,",
-				"n engin",
 				"mind th",
 				"like en",
 				"hinking",
-				"em - th",
+				"gineeri",
+				"e think",
 				"'re thi",
+				" to sol",
+				" them -",
 				" so the",
 				" asked ",
 				"ve an en",
 				"to solve",
 				"they're ",
 				"so they'",
+				"sked to ",
 				"ring pro",
+				"o solve ",
 				"neering ",
 				"nd them ",
+				"n engine",
 				"m, so th",
 				"king lik",
 				"ked to s",
@@ -52,11 +56,13 @@
 				"ing prob",
 				"ing like",
 				"ineering",
+				"ind them",
 				"ike engi",
 				"hey're t",
 				"ey've be",
 				"ering pr",
 				"em, so t",
+				"em - the",
 				"eering p",
 				"e engine",
 				"e been a",
@@ -66,6 +72,7 @@
 				"- they'v",
 				"'t mind ",
 				"# Don't ",
+				" thinkin",
 				" they've",
 				" an engi",
 				" - they'"
@@ -102,6 +109,6 @@
 			]
 		}
 	],
-	"updt": 1572785540863,
-	"edit": 92
+	"updt": 1572788245146,
+	"edit": 93
 }
