--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_z6s9es.sys_expose_upgrades",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_z6s9es.sys_expose_upgrades",
 	"sector": "K_6762",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572568614596
+		},
+		{
+			"type": "died",
+			"when": 1572793055551
 		}
 	],
 	"next_scrape": 1572837121564,
@@ -109,6 +113,6 @@
 			]
 		}
 	],
-	"updt": 1572788245146,
-	"edit": 93
+	"updt": 1572791177534,
+	"edit": 94
 }
