--- a/uknown_z6s9es.db.json
+++ b/uknown_z6s9es.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_z6s9es.db",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_z6s9es.db",
 	"sector": "NGC_7513",
 	"sec_level": 2,
@@ -35,10 +35,14 @@
 				"from": "NGC_7513",
 				"to": "K_3804"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1572793166987
+		}
 	],
-	"updt": 1569114072498,
-	"edit": 12,
+	"updt": 1570662778651,
+	"edit": 13,
 	"scrape_ct": 15,
 	"next_scrape": 1569108222058,
 	"category": "UNKNOWN CATEGORY",
